fixes, rework, new legal tab, hide/show Clippy

--- a/src/popup.css
+++ b/src/popup.css
@@ -122,3 +122,12 @@ body {
     background-color: #f2f2f2;
     text-align: left;
   }
+
+  .table-site-url {
+    word-wrap: break-word;
+    max-width: 190px;
+  }
+
+  .medium-text {
+    font-size: medium;
+  }
